CLEMENTINE-217 Modified the location where the app is looking for the jasperreport.dtd file to be based off of the executing assembly's local directory.
git-svn-id: svn://svn.orangeleap.com/clementine/trunk@4121 0f581344-5646-3a48-8ded-616bfea576c6